fix initials, same name profile, button spacing

--- a/src/renderer/components/ft-subscribe-button/ft-subscribe-button.sass
+++ b/src/renderer/components/ft-subscribe-button/ft-subscribe-button.sass
@@ -14,6 +14,8 @@
   display: inline-block
   &.plusButton
     margin-right: 0
+  &.minusButton
+    left: -8px
 
 #profileList
   top: -5px
